--- a/giftCard.html
+++ b/giftCard.html
@@ -15,11 +15,24 @@
 
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
     <link rel="stylesheet" href="css/gif.css">
- 
+     <!--carrito-->
+     <link rel="stylesheet" href="css/carrito.css">
+  
 
 </head>
 
 <body class="fondito">
+      <!--CREAR EL MODAL-->
+      <section class="modal" id="modal-cursos">
+        <div id="modal_contenedor" class="d-none">
+            <img src="img/modal.svg" class="modal_img" alt="">
+            <h2 class="modal_titulo">¡¡Gracias por confiar en nosotros!!</h2>
+            <p class="cursosComprados_modal"></p>
+            <a href="#" class="cerrar_modal"> Cerrar </a>
+        </div>
+    
+    </section> 
+
     <!--primeralinea logo carro-->
     <header class="contenedor-buscador">
         <article class="contenedor-log-bu-ca">
@@ -278,7 +291,8 @@
         </section>
 
     </main>
-
+    <!--carrito-->
+   <script src="js/index.js"></script>
 
 
     <!-- ultima linea datos del grupo-->
