--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -19,6 +19,12 @@
     <!--carrucel-->
     <link rel="stylesheet" href="css/css/slick-theme.css">
     <link rel="stylesheet" href="css/css/slick.css">
+    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
+    <!--carrito-->
+    <link rel="stylesheet" href="css/carrito.css">
+
+
 </head>
 
 <body>
@@ -162,7 +168,7 @@
                     </div>
                     <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
-                        <h5 class="hh5">Coloracion canina</p>
+                        <h5 class="hh5">Coloracion canina Nivel 1</p>
                             <h6 class="duracion">Duracion=16hs</h6>
                             <a class="ver-detalle" href="curso.html">ver detalle</a>
 
@@ -194,7 +200,7 @@
                     </div>
                     <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
-                        <h5 class="hh5">Cuidado de patitas</p>
+                        <h5 class="hh5">Cuidado de patitas Nivel 1</p>
                             <h6 class="duracion">Duracion=16hs</h6>
                             <a class="ver-detalle" href="curso.html">ver detalle</a>
 
@@ -210,7 +216,7 @@
                     </div>
                     <button id="boton-curso-" class="boton-cartelito" type="button">COMPRAR</button>
                     <div class="contenedor-informacion-cuadrito">
-                        <h5 class="hh5">Como bañar perritos</p>
+                        <h5 class="hh5">Como bañar perros </p>
                             <h6 class="duracion">Duracion=16hs</h6>
                             <a class="ver-detalle" href="curso.html">ver detalle</a>
 
@@ -252,7 +258,7 @@
 
 
     </main>
-
+    <script src="js/index.js"></script>
     <!-- ultima linea datos del grupo-->
     <footer>
         <section class="seccion-foter">
@@ -275,9 +281,7 @@
 
 
     </footer>
-    <script src="js/index.js"></script>
-    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
+
 
     <script>
         $(document).ready(function () {
