--- a/contacto.html
+++ b/contacto.html
@@ -10,13 +10,25 @@
             max-width: 100%;
             height: auto;
         }
-        </style>
+    </style>
     <title>Cursos Estetica Canina</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
     <link rel="stylesheet" href="css/contacto.css">
+    <!--carrito-->
+    <link rel="stylesheet" href="css/carrito.css">
 </head>
 
 <body>
+    <!--CREAR EL MODAL carro-->
+    <section class="modal" id="modal-cursos">
+        <div id="modal_contenedor" class="d-none">
+            <img src="img/modal.svg" class="modal_img" alt="">
+            <h2 class="modal_titulo">¡¡Gracias por confiar en nosotros!!</h2>
+            <p class="cursosComprados_modal"></p>
+            <a href="#" class="cerrar_modal"> Cerrar </a>
+        </div>
+
+    </section>
     <!--primeralinea logo carro-->
     <header class="contenedor-buscador">
         <article class="contenedor-log-bu-ca">
@@ -29,7 +41,6 @@
                     <option value="CONTACTO"></option>
                 </datalist>
                 <img class="lupita" src="img/lupa.svg" alt="">
-
             </div>
             <div class="contenedor-carro">
                 <img class="carrito" src="img/carrito.svg" alt="carrito de compras">
@@ -43,66 +54,70 @@
             <li class="idem"><a href="index-Estetica.html" target="_blank">INICIO</a></li>
             <li class="idem"><a href="giftCard.html" target="_blank">GIFTCARD</a></li>
             <li class="idem"><a href="calendario.html" target="_blank">CALENDARIO</a></li>
-
             <li class="idem"><a href="contacto.html" target="_blank">CONTACTO</a></li>
         </ul>
     </nav>
+    <main>
+        <section class="fondocont">
+            <h3 class="cont-">ENVIANOS TU CONSULTA</h3>
 
-    <main  class="fondocont">
-        <section class="conjunto">
-            <article>
+            <article class="conjunto">
                 <div class="contenedor-contacto-datosContacto">
-                    <h3>CONTACTO</h3>
+
+                    <div class="cont-for">
+                        <form class="contenedor-imputs-formularios" action="#" name="form" id="form">
+
+                            <label for="nombreyapellido"></label>
+                            <input id="nombreyapellido" type="text" name="nombreyapellido"
+                                placeholder="Ingrese su nombre y apellido" required>
+
+                            <label for="eMail"></label>
+                            <input id="eMail" type="email" name="eMail" placeholder="Ingrese su Email" required>
+
+                            <label for="telefono-"></label>
+                            <input id="telefono-" type="tel" name="telefono" placeholder="Ingrese su telefono"
+                                required>
+
+                            <h4>Consulta</h4>
+                            <textarea name="mensaje" id="consulta" cols="50" rows="10" placeholder="Deja tu mensaje..."
+                                required></textarea>
+
+                            <input id="enviar-con" type="submit" value="Enviar">
+
+                        </form>
+                        <div id="mensajeerrorr" class="color-error"></div>
+                        <div id="mensajeclick" class="colorclick"></div>
 
 
-                    <form class="contenedor-imputs-formularios" action="#" method="post">
-                        <label for="nombreyapellido"></label>
-                        <input id="nombreyapellido" type="text" name="nombreyapellido"
-                            placeholder="Ingrese su nombre y apellido" required>
-
-                        <label for="eMail"></label>
-                        <input id="eMail" type="text" name="eMail" placeholder="Ingrese su Email" required>
-
-                        <label for="telefono"></label>
-                        <input id="telefono" type="text" name="telefono" placeholder="Ingrese su telefono">
-
-                        <h4>Consulta</h4>
-
-                        <textarea name="mensaje" id="" cols="50" rows="10" placeholder="Deja tu mensaje..."></textarea>
-                        <input type="submit" value="Enviar">
-                    </form>
-
-
-
+                    </div>
                     <div class="contenedor-datos-contacto">
-                        <h2>Contactanos</h2>
-                        <p>Av. Montecarlo 881,
+                        <h2 class="connnn1">Contactanos</h2>
+                        <p  class="connnn2" > Direccion:    Av. Montecarlo 881,
+                            <br>
                             B1763 Virrey del Pino,
+                            <br>
                             Provincia de Buenos Aires </p>
-                        <p>pepeLebu@vete.com.ar </p>
-                        <p> +54-01126367485</p>
+                        <p  class="connnn3">Email:    pepeLebu@vete.com.ar </p>
+                        <p  class="connnn4"> Cel:    +54-01126367485</p>
                     </div>
-
                 </div>
-
             </article>
+            <article class="cont-ubi-total">
+<div class="giflindo"><img src="img/axolote.gif" alt="" width="350px" height="300px"></div>
+<div><h1 class="contenedor-ubicacion">Ubicacion</h1>
 
-            <article>
-                <div class="contenedor-ubicacion">
-                    <h1>Ubicacion</h1>
-                    <div class="tamaño-ubicacion">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26260.03335385828!2d-58.5899864!3d-34.6419683!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7ef3c3d4dbb%3A0x104258a103e9764!2sLe%20Mascotte%20Peluquer%C3%ADa%20Canina%2C%20Escuela%20de%20Peluquer%C3%ADa%20Canina!5e0!3m2!1sen!2sar!4v1684209156567!5m2!1sen!2sar"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-
+                <iframe class="tamaño-ubicacion"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26260.03335385828!2d-58.5899864!3d-34.6419683!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7ef3c3d4dbb%3A0x104258a103e9764!2sLe%20Mascotte%20Peluquer%C3%ADa%20Canina%2C%20Escuela%20de%20Peluquer%C3%ADa%20Canina!5e0!3m2!1sen!2sar!4v1684209156567!5m2!1sen!2sar"
+                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+<div class="giflindo"><img src="img/BitterGaseousFish-size_restricted.gif" alt="" width="350px" height="300px"></div>
+                
             </article>
         </section>
     </main>
-
-
+    <script src="js/index.js"></script>
+    <script src="js/contacto.js"></script>
     <!-- ultima linea datos del grupo-->
     <footer>
         <section class="seccion-foter">
@@ -118,12 +133,9 @@
                 <div class="datos">
                     <p class="ppp">Instagram:</p>
                     <p class="ppp">Youtube:</p>
-
                 </div>
             </article>
         </section>
-
-
     </footer>
 </body>
 
