--- a/giftCard.html
+++ b/giftCard.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body class="fondito">
+<body>
       <!--CREAR EL MODAL-->
       <section class="modal" id="modal-cursos">
         <div id="modal_contenedor" class="d-none">
@@ -63,7 +63,7 @@
             <li class="idem"><a href="contacto.html" target="_blank">CONTACTO</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="fondito">
         <section class="conte-completo-gf">
 
 
